// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsentManager /> renders correctly when there are destinations 1`] = `
<PreferencesDialog__ContentContainer
  aria-modal={true}
  role="dialog"
>
  <FormattedMessage
    defaultMessage="Your cookie preferences"
    id="app.components.ConsentManager.Modal.PreferencesDialog.title"
    tagName="h1"
  />
  <PreferencesDialog__Scroll>
    <CategoryCard
      category="analytics"
      checked={true}
      destinations={
        Array [
          Object {
            "category": "Analytics",
            "description": "Google Analytics is the most popular marketing tool for the web. It’s free and provides a wide range of features. It’s especially good at measuring traffic sources and ad campaigns.",
            "id": "Google Analytics",
            "name": "Google Analytics",
            "website": "http://google.com/analytics",
          },
          Object {
            "category": "Tag Managers",
            "description": "MarketingTool is the most popular marketing tool for the web. It’s free and provides a wide range of features. It’s especially good at measuring traffic sources and ad campaigns.",
            "id": "MarketingTool",
            "name": "MarketingTool",
            "website": "http://random.com/marketing",
          },
        ]
      }
      handleChange={[Function]}
      key="analytics"
    />
    <CategoryCard
      category="advertising"
      checked={null}
      destinations={
        Array [
          Object {
            "category": "Advertising",
            "description": "Advertising BS",
            "id": "AdvertisingTool",
            "name": "AdvertisingTool",
            "website": "http://random.com/advertising",
          },
        ]
      }
      handleChange={[Function]}
      key="advertising"
    />
    <CategoryCard
      category="functional"
      checked={null}
      destinations={
        Array [
          Object {
            "category": "Security & Fraud",
            "description": "Actually might be handy",
            "id": "FunctionalTool",
            "name": "FunctionalTool",
            "website": "http://random.com/securitycookie",
          },
        ]
      }
      handleChange={[Function]}
      key="functional"
    />
  </PreferencesDialog__Scroll>
  <PreferencesDialog__Spacer />
  <PreferencesDialog__ButtonContainer>
    <WithTheme(Button)
      className="integration-cancel"
      onClick={[MockFunction]}
      style="primary-inverse"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="app.components.ConsentManager.Modal.PreferencesDialog.cancel"
      />
    </WithTheme(Button)>
    <WithTheme(Button)
      className="integration-save"
      disabled={true}
      onClick={[Function]}
      style="primary"
    >
      <FormattedMessage
        defaultMessage="Save"
        id="app.components.ConsentManager.Modal.PreferencesDialog.save"
      />
    </WithTheme(Button)>
  </PreferencesDialog__ButtonContainer>
</PreferencesDialog__ContentContainer>
`;

exports[`<ConsentManager /> renders correctly when there are no destinations 1`] = `
<PreferencesDialog__ContentContainer
  aria-modal={true}
  role="dialog"
>
  <FormattedMessage
    defaultMessage="Your cookie preferences"
    id="app.components.ConsentManager.Modal.PreferencesDialog.title"
    tagName="h1"
  />
  <PreferencesDialog__Scroll />
  <PreferencesDialog__Spacer />
  <PreferencesDialog__ButtonContainer>
    <WithTheme(Button)
      className="integration-cancel"
      onClick={[MockFunction]}
      style="primary-inverse"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="app.components.ConsentManager.Modal.PreferencesDialog.cancel"
      />
    </WithTheme(Button)>
    <WithTheme(Button)
      className="integration-save"
      disabled={false}
      onClick={[Function]}
      style="primary"
    >
      <FormattedMessage
        defaultMessage="Save"
        id="app.components.ConsentManager.Modal.PreferencesDialog.save"
      />
    </WithTheme(Button)>
  </PreferencesDialog__ButtonContainer>
</PreferencesDialog__ContentContainer>
`;
